# lxc-research

./: .gitignore  .gitmodules  Cargo.toml  README.md
docs/expose/: main.tex  references.bib
docs/thesis/: .gitignore  abstract.tex  config.tex  main.tex  references.bib  title.tex
docs/thesis/chapters/: abstract.tex  appendix.tex  concept.tex  conclusion.tex  eigenst.tex  experiment.tex  fundamentals-v2.tex  fundamentals.tex  implementation.tex  introduction.tex  state-of-research.tex
src/: .clang-format  CMakeLists.txt  project-meta-info.in
src/conty/: CMakeLists.txt  Cargo.toml  main.c
src/conty/dependencies/: bpftool.cmake  libbpf.cmake  libcap.cmake  libjsonc.cmake  libnl.cmake
src/conty/examples/: clone-example.rs  clone.rs
src/conty/include/conty/: bpf.h  conty.h  oci.h  queue.h
src/conty/lib/: CMakeLists.txt  clone.c  clone.h  container.c  container.h  json.c  log.c  log.h  mount.c  mount.h  namespace.h  oci.c  oci.h  queue.h  resource.h  safestring.h  sync.c  sync.h  user.c  user.h
src/conty/modules/: FindBpfGen.cmake  FindLibBpf.cmake  FindLibElf.cmake
src/conty/src/: CMakeLists.txt  bench.c  bench.h  capability.h  clone.c  clone.h  conf.c  conf.h  container.c  container.h  context.cpp  conty.c  hash.h  helpers.h  histogram.c  histogram.h  hook.c  hook.h  io-config.json  io-rootfs.sh  io.c  lib.rs  log.c  log.h  map.bpf.h  mount.c  mount.h  namespace.c  namespace.h  net-config.json  net-rootfs.sh  net.c  network.c  network.h  nsbench.c  oci-json.c  oci.cpp  oci.h  oci.rs  resource-namespace.cpp  (+24 more)
src/conty/src/bench/: .gitignore  Dockerfile.fio  Dockerfile.iperf3  Makefile  README.md  io-container-template.json  net-container-client-template.json  net-container-server-template.json
src/conty/src/bench/hooks/: bridge_hook.go  container.go  go.mod
src/conty/src/bench/plots/: plot_bytes.plt  plot_mtu.plt  plot_retransmits.plt  plot_rtt.plt  plot_rtt_var.plt  plot_throughput.plt
src/conty/src/bench/plotters/: fio-plot.sh  iperf-plot.sh  iperf-prepare.sh
src/conty/src/bpf/: CMakeLists.txt  fs.h  histogram.h  rqlatency.bpf.c  scale.bpf.h  test.c  trace.c  vfslatency.bpf.c
src/conty/src/cpu/: CMakeLists.txt  config.json
src/conty/src/disk/: CMakeLists.txt  config.json  go.mod
src/conty/src/hooks/: bridge_hook.go  bridge_hook_test.go  hook.go
src/conty/src/hooks/cmd/network/: main.go
src/conty/src/net/: CMakeLists.txt  config.json  go.mod
src/conty/src/oci/: capability.rs  container_state.rs  device.rs  hook.rs  mod.rs  namespace.rs  process.rs  resource.rs  seccomp.rs  user.rs
src/conty/src/os/: process.rs
src/conty/src/syscall/: clone.rs  errno.rs  ffi.rs  fs.rs  mod.rs  process.rs
src/conty/src/workloads/: CMakeLists.txt
src/conty/src/workloads/cpu/: CMakeLists.txt  config.json  go.mod
src/conty/src/workloads/disk/: config.json
src/conty/src/workloads/net/: config.json
src/conty/tests/: CMakeLists.txt  clone-test.c  conf-test.cpp  container-test-1.json  container-test.c  context-test.cpp  hook-test.c  hook-test.cpp  mount-test.c  namespace-test.cpp  network-test.cpp  oci-test.c  oci-test.cpp  resource-namespace-test.cpp  resource-test.c  sandbox-test.c  sync-test.c  user-test.c  user-test.cpp
src/os-concepts/: CMakeLists.txt
src/os-concepts/src/: CMakeLists.txt  capabilities-print.c  clone.c  exit-abnormal.c  exit-normal.c  exit.c  fork.c  proc-credentials.c
